# aoh

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs-deploy.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/design/: 2026-07-14-design-review.md  2026-07-14-spec-v1alpha2-design.md  2026-07-15-kubeops-pack-binding-design.md  2026-07-16-claude-codex-adapters-design.md  2026-07-16-docs-site-design.md  2026-07-17-v03-fleet-lifecycle-design.md
.planning/refs/: REFERENCE-deck-pattern.html
.planning/todos/: pending.md
authoring-skills/create-aoh-pack/: SKILL.md
docs/: adapters.md  authoring.md  hermes-adapter.md  installs.md  spec.md
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/blog/: 2026-07-14-killing-the-workflow-kind.md  2026-07-15-a-read-only-kubernetes-agent.md  2026-07-16-building-aoh-docs-like-aoh-packs.md  2026-07-16-hello-field-notes.md  2026-07-16-two-walls.md  authors.yml  tags.yml  (+1 more)
tests/: test_adapter_base.py  test_adapter_contract.py  test_binding.py  test_claude_code_adapter.py  test_cli.py  test_cli_fleet.py  test_codex_adapter.py  test_core_collection.py  test_gitops.py  test_hermes_agent.py  test_hermes_install.py  test_inherit_mode.py  test_installer.py  test_kubeops_collection.py  test_manifest.py  test_pack_validation.py  test_paths.py  test_role_mapping.py  test_site.py  test_site_e2e.py  test_site_lock.py  test_team_mapping.py
(+111 files in other folders)
