[project]
name = "aoh"
version = "0.1.0"
description = "Agentic Ops Harness: portable ops superpowers and runtime adapters."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
aoh = "aoh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
